# flext-cli

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  CLEANUP_PROGRESS.md  CLI_MIGRATION_GUIDE.md  CONSOLIDATION_SESSION_2.md  FINAL_QA_STATUS.md  FINAL_VALIDATION.md  FLEXT_CORE_MIGRATION_APPLIED.md  LOGGING_MIGRATION.md  Makefile  Makefile.bak  PYDANTIC_STANDARDIZATION.md  QA_FINAL_STATUS.md  QUICK_REFERENCE.md  README.md  TEST_STATUS_FINAL.md  TODO.md  WORK_COMPLETED.md  analysis.txt  base.mk  constants_to_add.txt  coverage_report.txt  debug_e2e.py  demo.toml  demo.xml  demo.yaml  flext_export_20250725_221130.csv  flext_export_20250725_221130.json  flext_export_20250726_014743.json  flext_export_20250726_044743.json  flext_export_20250728_122009.json  json  meltano.yml  mypy_errors.txt  pyproject.toml  replace_auth_methods.sh  (+14 more)
.serena/: project.yml
.serena/memories/: code_style_and_conventions.md  flext_core_typing_final_completion.md  flext_pydantic_standardization_plan.md  project_purpose_and_tech_stack.md  suggested_commands.md  task_completion_requirements.md
docs/: BEST_PRACTICES.md  FLEXT_CLI_GENERIC_TRANSFORMATION_PLAN.md  FLEXT_CONFIG_INTEGRATION.md  GLOBAL_CONFIGURATION_REFACTORING.md  IMPLEMENTATION_TASKS.md  MIGRATION_GUIDE.md  PROGRESS.md  QA_HANDOFF.md  QUICKSTART.md  README.md  TODO.md  TRANSFORMATION_COMPLETE.md  TRANSFORMATION_PLAN.md  api-reference.md  architecture.md  ast-analysis-report.md  development.md  flext-cli-investigation.md  getting-started.md  index.md  integration.md  plan-end.md  troubleshooting.md
docs/api/: commands.md
docs/api-reference/: README.md
docs/architecture/: ARCHITECTURE.md  overview.md
docs/development/: roadmap.md  setup.md
docs/examples/: basic-usage.md
docs/guides/: README.md  configuration.md  development.md  getting-started.md  security.md  settings.md  skill-automation-pattern.md  testing.md  troubleshooting.md
docs/integration/: README.md  flexcore.md
docs/refactoring/: ARCHITECTURE_COMPARISON.md  BREAKING_CHANGES.md  MIGRATION_GUIDE_V0.9_TO_V0.10.md  PHASE_1_DELETIONS.sh  README.md  REFACTORING_PLAN_V0.10.0.md  architecture-comparison.md  breaking-changes.md  convert_file_tools.py  direct-typing-refactor-plan.md  execute_phase_1.sh  migration-guide-v0.9-to-v0.10.md  phase-1-implementation-guide.md  refactoring-plan-v0.10.0.md
docs/standards/: python-module-organization.md
docs/troubleshooting/: common-issues.md
examples/: 01_basic_cli_usage.py  01_foundation_patterns.py  01_getting_started.py  02_cli_commands_integration.py  02_click_integration.py  02_output_formatting.py  03_data_processing_and_output.py  03_domain_entities.py  03_interactive_prompts.py  04_authentication_and_authorization.py  04_basic_usage.py  04_file_operations.py  05_advanced_service_integration.py  05_authentication.py  06_comprehensive_cli_application.py  06_configuration.py  07_data_output.py  07_enterprise_patterns.py  07_patterns.py  07_plugin_system.py  08_api_usage.py  08_ecosystem_integration.py  08_shell_interaction.py  09_performance_optimization.py  10_boilerplate_reduction.py  10_testing_utilities.py  11_boilerplate_examples.py  11_complete_integration.py  12_comprehensive_boilerplate.py  12_pydantic_driven_cli.py  14_advanced_file_formats.py  14_massive_comparison.py  15_massive_demo.py  15_plugin.py  README.md  __init__.py  _models.py  advanced_boilerplate_reduction.py  advanced_data_output.py  advanced_patterns_examples.py  (+43 more)
examples/cli_app/: README.md  __init__.py  cli.py
examples/output/: sales_report.csv
examples/plugins/: __init__.py  example_plugin.py  protocols.py  typings.py
examples/web_client/: api.py  client.py
examples_backup/: 01_basic_cli_usage.py  02_click_integration.py  03_domain_entities.py  04_basic_usage.py  05_basic_usage_examples.py  09_practical_usage.py  10_boilerplate_reduction.py  13_boilerplate_demo.py  README.md  __init__.py
examples_backup/cli_app/: cli.py
exemples/: 02_click_integration.py  03_domain_entities.py  advanced_boilerplate_reduction.py  basic_usage_examples.py  boilerplate_reduction_examples.py  comprehensive_boilerplate_examples.py  practical_usage.py  real_boilerplate_reduction_demo.py
exemples/cli_app/: README.md
exemples/web_client/: __init__.py  client.py
reports/: pytest.xml
scripts/: README.md  debug_e2e.py  extract_hardcoded_strings.py  migrate_strings_to_constants.py  replace_hardcoded_strings.py
src/flext_cli/: README.md  __init__.py  __main__.py  __version__.py  _deprecated.py  _models_config.py  advanced_types.py  aliases.py  api.py  api_functions.py  app_base.py  application_commands.py  architecture.py  auth.py  base.py  base_core.py  base_service.py  cli.py  cli_auth.py  cli_bus.py  cli_config.py  cli_decorators.py  cli_main.py  cli_mixins.py  cli_params.py  cli_types.py  cli_utils.py  client.py  client.py.backup  cmd.py  cmd_config.py  cmd_config_alt.py  cmd_debug.py  cmd_debug_alt.py  command_builder.py  command_models.py  command_service.py  commands.py  commands_auth.py  commands_config.py  (+89 more)
src/flx_cli/: README.md  __init__.py  __version__.py  cli.py  (+1 more)
test-project/: pyproject.toml
tests/: README.md  __init__.py  _helpers.py  base.py  conftest.py  constants.py  integration_test_complete_workflow.py  models.py  protocols.py  test_advanced_patterns.py  test_api.py  test_api_comprehensive.py  test_api_core.py  test_api_coverage_fixed.py  test_api_real.py  test_api_real_comprehensive.py  test_application_commands.py  test_auth_commands.py  test_auth_commands_real.py  test_auth_comprehensive.py  test_auth_real_validation.py  test_base_service.py  test_base_service_real_comprehensive.py  test_basic.py  test_basic_functionality.py  test_boilerplate_reduction.py  test_cli.py  test_cli_auth_coverage.py  test_cli_auth_coverage_fixed.py  test_cli_auth_real_comprehensive.py  test_cli_bus.py  test_cli_bus_basic.py  test_cli_direct.py  test_cli_entities.py  test_cli_main.py  test_cli_mixins.py  test_cli_mixins_real.py  test_cli_mixins_real_comprehensive.py  test_cli_utils.py  test_cli_utils_coverage.py  (+148 more)
(+271 files in other folders)
