[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "click>=8.2.1",
        "flext-core @ file:../flext-core",
        "pydantic-settings>=2.10.1",
        "pydantic>=2.11.7",
        "pydantic-core>=2.27.0",
        "pyyaml>=6.0",
        "rich>=14.0.0",
        "tabulate>=0.9.0",
        "typer>=0.12.0",
    ]
    description = "FLEXT CLI - Developer Command Line Interface"
    keywords = [
        "cli",
        "command-line",
        "enterprise",
        "flext",
        "tools",
        "typed",
    ]
    name = "flext-cli"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"
    [[project.authors]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name  = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext-cli/blob/main/README.md"
        Homepage      = "https://github.com/flext-sh/flext-cli"
        Repository    = "https://github.com/flext-sh/flext-cli"

    [project.optional-dependencies]
        dev = [
            "autoflake>=2.3.1",
            "black>=25.1.0",
            "codespell>=2.3.0",
            "deptry>=0.23.0",
            "isort>=6.0.1",
            "pre-commit>=4.0.1",
            "pylint>=3.3.0",
            "pyupgrade>=3.19.0",
            "radon>=6.0.1",
            "ruff>=0.12.3",
            "vulture>=2.13",
        ]
        security = [
            "bandit>=1.8.0",
            "pip-audit>=2.7.3",
        ]
        test = [
            "factory-boy>=3.3.1",
            "faker>=37.4.0",
            "hypothesis>=6.125.0",
            "pytest-benchmark>=5.1.0",
            "pytest-clarity>=1.0.1",
            "pytest-cov>=6.2.0",
            "pytest-deadfixtures>=2.2.1",
            "pytest-env>=1.1.5",
            "pytest-mock>=3.14.0",
            "pytest-randomly>=3.16.0",
            "pytest-sugar>=1.0.0",
            "pytest-timeout>=2.4.0",
            "pytest-xdist>=3.8.0",
            "pytest>=8.4.0",
        ]
        typings = [
            "django-stubs>=5.2.2",
            "types-ldap3>=2.9.13.20250622",
            "types-protobuf>=6.30.2.20250703",
            "types-psutil>=7.0.0",
            "types-psycopg2>=2.9.21.20250718",
            "types-python-dateutil>=2.9.0",
            "types-pyyaml>=6.0.12",
            "types-redis>=4.6.0",
            "types-requests>=2.32.4",
            "types-setuptools>=80.9.0",
            "types-tabulate>=0.9.0.20241207",
            "types-toml>=0.10.8.20240310",
        ]

[tool]

    [tool.bandit]
        extend = "../.bandit-shared.toml"

    [tool.coverage]
        extend = "../.coverage-shared.toml"

    [tool.deptry]
        exclude = [
            ".archive",
            ".git",
            ".meltano",
            ".mypy_cache",
            ".pyrefly_cache",
            ".pytest_cache",
            ".ruff_cache",
            ".venv",
            "__pycache__",
            "build",
            "dist",
            "htmlcov",
            "node_modules",
            "reports",
            "tests",
            "tests",
            "vendor",
            "venv",
        ]
        known_first_party = [
            "flext_cli",
        ]
        pep621_dev_dependency_groups = [
            "dev",
            "security",
            "test",
            "typings",
        ]

    [tool.poetry]
        [[tool.poetry.packages]]
            from    = "src"
            include = "flext_cli"


        [tool.poetry.dependencies.flext-core]
            develop = true
            path    = "../flext-core"

        [tool.poetry.dependencies.flext-observability]
            develop = true
            path    = "../flext-observability"


        [tool.poetry.group.dev.dependencies]
            docker          = ">=7.1.0"
            email-validator = "^2.3.0"
            hypothesis      = "^6.139.2"
            ldap3           = ">=2.9.1"
            numpy           = ">=2.3.2"
            psycopg2        = ">=2.9.10"
            pyrefly         = "^0.34.0"
            pytest          = "^8.4.1"
            pytest-cov      = "^7.0.0"
            redis           = ">=5.0.0"

        [tool.poetry.group.typings.dependencies]
            types-defusedxml = "^0.7.0.20250822"
            types-lxml       = "^2025.8.25"
            types-pyyaml     = "^6.0.12.20250809"
            types-toml       = "^0.10.8.20240310"

    [tool.pytest.ini_options]
        addopts = "-ra -q --strict-markers --strict-config"
        markers = [
            " marks tests as tests",
            "auth: marks tests as authentication tests",
            "benchmark: marks tests as benchmark tests",
            "compatibility: marks tests as compatibility tests",
            "concurrency: marks tests as concurrency tests",
            "core: marks tests as core functionality tests",
            "integration: marks tests as integration tests",
            "io: marks tests as I/O tests",
            "load: marks tests as load tests",
            "memory: marks tests as memory tests",
            "network: marks tests as network tests",
            "performance: marks tests as performance tests",
            "race_condition: marks tests as race condition tests",
            "regression: marks tests as regression tests",
            "security: marks tests as security tests",
            "slow: marks tests as slow (deselect with '-m \"not slow\"')",
            "stress: marks tests as stress tests",
            "unit: marks tests as unit tests",
        ]
        minversion = "8.0"
        testpaths = [
            "tests",
        ]

    [tool.ruff]
        extend = "../ruff-shared.toml"

        [tool.ruff.lint.isort]
            known-first-party = [
                "flext_cli",
            ]

        [tool.ruff.lint.per-file-ignores]
            # FBT001/FBT002: Boolean parameters match standard library signatures (json.dump, yaml.dump)
            # S105: False positives for token/password in constant string names (not actual secrets)
            # PLC0415: Lazy import in config.py is intentional
            "src/flext_cli/file_tools.py" = ["FBT001", "FBT002"]
            "src/flext_cli/constants.py" = ["S105"]
            "src/flext_cli/config.py" = ["PLC0415"]
            # Examples: Demo code - allow print, magic numbers, missing __init__.py, hardcoded values
            "examples/*.py" = ["T201", "PLR2004", "INP001", "S105"]
            "examples/**/*.py" = ["T201", "PLR2004", "INP001", "S105"]
            # Tests: Test code - allow asserts, magic numbers, missing __init__.py, hardcoded passwords in test data,
            # lazy imports, unused arguments (fixtures), private member access, broad pytest.raises,
            # boolean parameters in test functions, exception naming, /tmp paths in tests
            "tests/*.py" = ["S101", "S105", "S106", "S108", "PLR2004", "INP001", "PLC0415", "ARG001", "ARG002", "ARG005", "SLF001", "PT011", "FBT001", "FBT002", "N818"]
            "tests/**/*.py" = ["S101", "S105", "S106", "S108", "PLR2004", "INP001", "PLC0415", "ARG001", "ARG002", "ARG005", "SLF001", "PT011", "FBT001", "FBT002", "N818"]
            # Scripts: Utility scripts - allow magic numbers, shebang without executable, unused loop vars
            "scripts/*.py" = ["PLR2004", "EXE001", "B007"]

	[tool.pyrefly]
		# NOTE: Pyrefly (MyPy successor) with Pydantic plugin properly handles:
		#   - @computed_field + @property pattern (Pydantic 2.11+)
		#   - dict[str, object] type annotations (legitimate generic usage)
		#   - Field validators and serializers with proper type inference
		permissive-ignores = true
		project-excludes = [
		    "**/.git",
		    "**/.cache",
		    "**/.claude",
		    "**/__pycache__",
		    "**/*.venv",
		    "**/*dist",
		    "**/*mypy_cache",
		    "**/*pytest_cache",
		    "**/*ruff_cache",
		    "**/*venv/**",
		    "**/node_modules/**",
		    "**/*.pb2.py",
		    "**/*.pb2_grpc.py",
		    "**/build/**",
		]
		python-version = "3.13"

		# SubConfig: Disable unknown-name error for all models.py files
		# This handles forward references to classes defined later in the same file
		[[tool.pyrefly.sub-config]]
			matches = "**/*models.py"
			[tool.pyrefly.sub-config.errors]
				unknown-name = false
