[build-system]
    build-backend = "poetry.core.masonry.api"
    requires = [
        "poetry-core>=1.9.0",
    ]

[project]
    classifiers = [
        "Development Status :: 5 - Production/Stable",
        "Intended Audience :: Developers",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent",
        "Programming Language :: Python :: 3 :: Only",
        "Programming Language :: Python :: 3.13",
        "Topic :: Software Development :: Libraries :: Python Modules",
        "Typing :: Typed",
    ]
    dependencies = [
        "cachetools>=5.3.0",
        "click>=8.2.1",
        "flext-core @ file:../flext-core",
        "pluggy>=1.3.0",
        "prompt-toolkit>=3.0.0",
        "pydantic-core (>=2.41.4)",
        "pydantic-settings>=2.10.1",
        "pydantic (>=2.12.3)",
        "pyyaml>=6.0",
        "rich>=14.0.0",
        "tabulate>=0.9.0",
        "typer>=0.12.0",
        "attrs (>=25.4.0,<26.0.0)",
    ]
    description = "FLEXT CLI - Developer Command Line Interface"
    keywords = [
        "cli",
        "command-line",
        "enterprise",
        "flext",
        "tools",
        "typed",
    ]
    name = "flext-cli"
    readme = "README.md"
    requires-python = ">=3.13,<3.14"
    version = "0.9.0"

    [[project.authors]]
        email = "team@flext.sh"
        name = "FLEXT Team"

    [[project.maintainers]]
        email = "team@flext.sh"
        name = "FLEXT Team"

    [project.license]
        text = "MIT"

    [project.urls]
        Documentation = "https://github.com/flext-sh/flext-cli/blob/main/README.md"
        Homepage = "https://github.com/flext-sh/flext-cli"
        Repository = "https://github.com/flext-sh/flext-cli"

    [project.optional-dependencies]
        dev = [
            "autoflake>=2.3.1",
            "black>=25.1.0",
            "codespell>=2.3.0",
            "deptry>=0.23.0",
            "isort>=6.0.1",
            "pre-commit>=4.0.1",
            "pylint>=3.3.0",
            "pyupgrade>=3.19.0",
            "radon>=6.0.1",
            "ruff>=0.12.3",
            "vulture>=2.13",
        ]
        security = [
            "bandit>=1.8.0",
            "pip-audit>=2.7.3",
        ]
        test = [
            "factory-boy>=3.3.1",
            "faker>=37.4.0",
            "hypothesis>=6.125.0",
            "pytest-benchmark>=5.1.0",
            "pytest-clarity>=1.0.1",
            "pytest-cov>=6.2.0",
            "pytest-deadfixtures>=2.2.1",
            "pytest-env>=1.1.5",
            "pytest-mock>=3.14.0",
            "pytest-randomly>=3.16.0",
            "pytest-sugar>=1.0.0",
            "pytest-timeout>=2.4.0",
            "pytest-xdist>=3.8.0",
            "pytest>=8.4.0",
        ]
        typings = [
            "django-stubs>=5.2.2",
            "types-ldap3>=2.9.13.20250622",
            "types-protobuf>=6.30.2.20250703",
            "types-psutil>=7.0.0",
            "types-psycopg2>=2.9.21.20250718",
            "types-python-dateutil>=2.9.0",
            "types-pyyaml>=6.0.12",
            "types-redis>=4.6.0",
            "types-requests>=2.32.4",
            "types-setuptools>=80.9.0",
            "types-tabulate>=0.9.0.20241207",
            "types-toml>=0.10.8.20240310",
        ]

[tool]
    [tool.deptry]
        known_first_party = [
            "flext_cli",
        ]

    [tool.poetry]
        [[tool.poetry.packages]]
            from = "src"
            include = "flext_cli"

        [tool.poetry.dependencies]
            python = ">=3.13,<3.14"

            [tool.poetry.dependencies.flext-core]
                develop = true
                path = "../flext-core"

            [tool.poetry.dependencies.flext-observability]
                develop = true
                path = "../flext-observability"

        [tool.poetry.group.dev.dependencies]
            docker = ">=7.1.0"
            email-validator = "^2.3.0"
            hypothesis = "^6.139.2"
            ldap3 = ">=2.9.1"
            numpy = ">=2.3.2"
            psycopg2 = ">=2.9.10"
            pyrefly = "^0.34.0"
            pytest = "^8.4.1"
            pytest-cov = "=7.0.0"
            redis = ">=5.0.0"

        [tool.poetry.group.typings.dependencies]
            types-cachetools = "^6.2.0.20250827"
            types-defusedxml = "^0.7.0.20250822"
            types-lxml = "^2025.8.25"
            types-pyyaml = "^6.0.12.20250809"
            types-toml = "^0.10.8.20240310"
        django = ">=5.2.8"

    [tool.pytest.ini_options]
        addopts = [
            "--cov-report=term-missing",
            "--cov=src/",
            "--strict-config",
            "--strict-markers",
            "--tb=short",
            "-p no:sugar",
            "-q",
            "-ra",
        ]
        markers = [
            " marks tests as tests",
            "auth: marks tests as authentication tests",
            "benchmark: marks tests as benchmark tests",
            "compatibility: marks tests as compatibility tests",
            "concurrency: marks tests as concurrency tests",
            "core: marks tests as core functionality tests",
            "integration: marks tests as integration tests",
            "io: marks tests as I/O tests",
            "load: marks tests as load tests",
            "memory: marks tests as memory tests",
            "network: marks tests as network tests",
            "performance: marks tests as performance tests",
            "race_condition: marks tests as race condition tests",
            "regression: marks tests as regression tests",
            "security: marks tests as security tests",
            "slow: marks tests as slow (deselect with '-m \"not slow\"')",
            "stress: marks tests as stress tests",
            "unit: marks tests as unit tests",
        ]
        minversion = "8.0"
        python_classes = [
            "Test*",
        ]
        python_files = [
            "*_test.py",
            "test_*.py",
        ]
        python_functions = [
            "test_*",
        ]
        testpaths = [
            "tests",
        ]

    [tool.pyrefly]
        python_version = "3.13"

    [tool.ruff]
        extend = "../ruff-shared.toml"

        [tool.ruff.lint.isort]
            known-first-party = [
                "flext_cli",
            ]
